--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "mongoose-data-seed": "^2.1.6",
     "nodemon": "^2.0.15"
   }
 }
