--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "jest": "^27.3.1",
+    "mongodb-memory-server": "^8.0.3",
     "mongoose-data-seed": "^2.1.6",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
   }
 }
