--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Alex Rutledge <alexprutledge@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./server.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -27,5 +30,10 @@
     "mongoose-data-seed": "^2.1.6",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "debug": "0"
+    }
   }
 }
