--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
+    "debug": "node --inspect ./src/server.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -21,7 +23,8 @@
     "mongoose": "^6.0.12",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
